alter_swagger_info
